--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
+<body id="message">
     <header class="">
         <div class="header">
             <h1 class="logo">Wagude</h1>
@@ -56,7 +56,7 @@
                 and excellent abilities in solving problems. My goal and desire  is to
                 create programs and websites that can help solve the emerging problems in our society.</p>
 
-                <div class="Skills" id="Skills">
+                <div class="Skills" id="message">
                     <h1> MY <span>SKILLS</span> </h1>
                     <ul>
                     <li><h3>HTML</h3>
