--- a/index.html
+++ b/index.html
@@ -93,13 +93,29 @@
 
     <footer id="contact">
         <div class="container">
-            <h2>Contact Me</h2>
-            <ul>
-                <li>Email: Wagudesteven01@gmail.com</li>
-                <li>Phone: +254113879707</li>
-                <li>LinkedIn: <a href="#">Your LinkedIn Profile</a></li>
-                <li>GitHub: <a href="#">Your GitHub Profile</a></li>
-            </ul>
+            <div class="contact-form-container">
+                <form class="contact-form" action="#" method="post">
+                    <h2>Contact Us</h2>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject:</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone Number:</label>
+                        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        
         </div>
     </footer>
 </body>
